@@ -235,3 +235,5 @@ version 5.0.0
 -- add support for creating LUKS volumes that only uses a detached header.The detached header will be created in the
    user home directory and the volume can not be unlocked without this detached header.The detached header can be
    reattached later on through zuluCrypt-gui->menu->Volumes->Restore Volume Header.
+-- its now possible to create a shared mount point when unlocking a volume in zuluCrypt-gui
+-- its now possible to unlock VeraCrypt volumes from favorite feature in zuluCrypt-gui
